# RType-GameEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: ci-build.yaml  ci-linter.yaml
include/: Core.hpp
include/GameEngine/: Core.hpp
include/GameEngine/components/: AnimationComponent.hpp  DrawableComponent.hpp  DynamicScale.hpp  Movement.hpp  Parallax.hpp  Scale.hpp  Sound.hpp  TextComponent.hpp
include/GameEngine/ecs/: Registry.hpp
include/GameEngine/ecs/tppFiles/: Registry.tpp
include/GameEngine/event_subscriptions/: EngineSubscriptions.hpp
include/GameEngine/events/: CoreEvents.hpp  GameEngineEvents.hpp
include/GameEngine/external_lib/: FA6FreeSolidFontData.h  IconsFontAwesome6.h  imgui_impl_raylib.h  rlImGui.h
include/GameEngine/graphic/: IAssetLoader.hpp  IAudio.hpp  IKeyMapping.hpp  IRender.hpp  Raylib.hpp
include/GameEngine/manager/: ResourceManager.hpp  SceneManager.hpp
include/GameEngine/systems/: CollisionSystem.hpp  InputPressedSystem.hpp  InputReleasedSystem.hpp  InputSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp
include/GameEngine/systems/animation_system/: AnimationSystem.hpp
include/GameEngine/systems/render_system/: AudioSystem.hpp  ImGuiSystem.hpp  RenderSystem.hpp
include/GameEngine/utils/: AnimationStruct.hpp  EngineMath.hpp
include/components/: AnimationComponent.hpp  Clickable.hpp  Collider.hpp  Controllable.hpp  Damage.hpp  DrawableComponent.hpp  DynamicScale.hpp  EntityType.hpp  Mouvement.hpp  Parallax.hpp  Position.hpp  Speed.hpp  SpriteComponent.hpp  Velocity.hpp
include/ecs/: Entity.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp
include/ecs/tppFiles/: IndexedZipper.tpp  IndexedZipperIterator.tpp  Registry.tpp  SparseArray.tpp  Zipper.tpp  ZipperIterator.tpp
include/event_subscriptions/: EngineSubscriptions.hpp
include/events/: CoreEvents.hpp
include/graphic/: IAssetLoader.hpp  IAudio.hpp  IKeyMapping.hpp  IRender.hpp  Raylib.hpp
include/init/: InitActionInput.hpp
include/logs/: Logs.hpp
include/systems/: CollisionSystem.hpp  IaPatternSystem.hpp  InputReleasedSystem.hpp  InputSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp
include/systems/animation_system/: AnimationSystem.hpp
include/systems/render_system/: AudioSystem.hpp  RenderSystem.hpp  ResourceManager.hpp
include/utils/: AnimationStruct.hpp
src/: Core.cpp  main.cpp
src/components/: AnimationComponent.cpp  Clickable.cpp  Collider.cpp  Controllable.cpp  Damage.cpp  DrawableComponent.cpp  DynamicScale.cpp  EntityType.cpp  Mouvement.cpp  Movement.cpp  Parallax.cpp  Position.cpp  Scale.cpp  Shooting.cpp  Sound.cpp  Speed.cpp  SpriteComponent.cpp  TextComponent.cpp  Velocity.cpp
src/ecs/: Entity.cpp  Registry.cpp
src/event_subscriptions/: EngineSubscriptions.cpp
src/external_lib/: rlImGui.cpp
src/graphic/: Raylib.cpp
src/init/: InitActionInput.cpp
src/logs/: Logs.cpp
src/manager/: ResourceManager.cpp  SceneManager.cpp
src/systems/: CollisionSystem.cpp  InputPressedSystem.cpp  InputReleasedSystem.cpp  InputSystem.cpp  MovementSystem.cpp  PhysicsSystem.cpp
src/systems/animation_system/: AnimationSystem.cpp
src/systems/render_system/: AudioSystem.cpp  ImGuiSystem.cpp  RenderSystem.cpp  ResourceManager.cpp
